Fix - rename 'search by using basic search' to 'use basic search' - rename url /search to /advanced-search - "Instantly search" - not centered

--- a/web/source/sass/pages/search/strain/advanced_search.scss
+++ b/web/source/sass/pages/search/strain/advanced_search.scss
@@ -199,7 +199,7 @@ body {
     .subtitle:after {
       content: "";
       position: absolute;
-      height: 5px;
+      height: 9px;
       border-bottom: 2px solid $grey-blue;
       top: 0;
       width: 150px;
